--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="../img/bobaBuds.png" width="30" height="30" class="d-inline-block align-top" alt="Boba Buds">
+                <img src="../img/bobaBuds.png" width="30" height="30" class="d-inline-block align-top" alt="">
                 Bao Bei
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,11 +14,10 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                </ul>
+                <div class="navbar-nav mr-auto">
+                    <a class="nav-item nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="/gallery.html">Memories</a>
+                </div>
             </div>
 
         </nav>
