--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,28 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
     <link rel="stylesheet" href="cards-gallery.css">
 </head>
+
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="../img/bobaBuds.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            Bao Bei
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="navbar-nav mr-auto">
+                <a class="nav-item nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/gallery">Memories<span class="sr-only">(current)</span></a>
+            </div>
+        </div>
+
+    </nav>
+</header>
+
+
 <body>
    <section class="gallery-block cards-gallery">
 	    <div class="container">
@@ -22,8 +44,11 @@
 	                		<img src="../img/image1.jpg" alt="Card Image" class="card-img-top">
 	                	</a>
 	                    <div class="card-body">
-	                        <h6><a href="#">Lorem Ipsum</a></h6>
-	                        <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+	                        <h6><a href="#">Confidence</a></h6>
+	                        <p class="text-muted card-text">
+								I still remember the first time you said I looked handsome in a picture.
+								It made me feel so much more confident about myself.
+							</p>
 	                    </div>
 	                </div>
 	            </div>
