added journal page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="/index">Home<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/gallery">Memories</a>
+                <a class="nav-item nav-link" href="/journal">Journal</a>
             </div>
         </div>
 
