--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,9 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/gallery">Memories<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/index">Home</a>
+				<a class="nav-item nav-link active" href="/gallery">Memories<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/journal">Journal</a>
             </div>
         </div>
 
