--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="../img/bobaBuds.png">
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Memories</title>
+    <title>Memories | Bao Bei</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
     <link rel="stylesheet" href="cards-gallery.css">
