--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/index">
             <img src="../img/bobaBuds.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Bao Bei
         </a>
@@ -30,11 +30,15 @@
 
 
 <body>
-    <h1>I LOVE YOU ISABELLE</h1>
-    <p>
-        This website is a place for all the amazing memories that we've made together.
-        Immortalized online on your very own webpage.
-    </p>
+    <div class="container">
+        <div class="row">
+            <h1 style="text-align: center;">I LOVE YOU ISABELLE</h1>
+            <p>
+                This website is a place for all the amazing memories that we've made together.
+                Immortalized online on your very own webpage.
+            </p>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
