changed logo, fixed divs, renamed page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="../img/bobaBuds.png">
+    <link rel="icon" href="../img/baoBuds.jpg">
     <title>For Bao Bei</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -10,7 +10,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/index">
-            <img src="../img/bobaBuds.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../img/baoBuds.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
             Bao Bei
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link active" href="/index">Home<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="/gallery">Memories</a>
+                <a class="nav-item nav-link" href="/memories">Memories</a>
                 <a class="nav-item nav-link" href="/journal">Journal</a>
             </div>
         </div>
