--- a/memories.html
+++ b/memories.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="icon" href="../img/bobaBuds.png">
+	<link rel="icon" href="../img/baoBuds.jpg">
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/index">
-            <img src="../img/bobaBuds.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../img/baoBuds.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
             Bao Bei
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="/index">Home</a>
-				<a class="nav-item nav-link active" href="/gallery">Memories<span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link active" href="/memories">Memories<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="/journal">Journal</a>
             </div>
         </div>
